Fixed horizontal scrollbar position

--- a/styles/common/scrollbar.less
+++ b/styles/common/scrollbar.less
@@ -62,13 +62,13 @@
 
 .customscroll-scrollbar-horizontal {
 	bottom: 4px;
-	height: 16px;
+	height: 8px;
 	left: 0;
 	margin-left: 2px;
 
 	div {
 		height: 4px;
-		margin: 12px 0px 2px 0px;
+		margin: 0px;
 		
 		.csstransitions & {
 			.transition(~"height 300ms ease 0ms, margin 300ms ease 0ms");
@@ -79,7 +79,7 @@
 .customscroll-scrollbar-horizontal.customscroll-scrollbar-shown {
 	div {
 		height: 8px;
-		margin: 10px 0px 2px 0px;
+		margin: 0px;
 		
 		.csstransitions & {
 			.transition(~"height 300ms ease 0ms, margin 300ms ease 0ms");
